<resources>
    <string name="app_name">Quản Lý Sinh Viên</string>
    <string name="anh_dai_dien">Ảnh đại diện</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="ma_sv">Mã SV</string>
    <string name="ho_ten">Họ tên</string>
    <string name="nam_sinh">Năm sinh</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="lop">Lớp</string>
    <string name="them">Thêm</string>
    <string name="luu">Lưu</string>
    <string name="huy">Hủy</string>
    <string name="xoa">Xóa</string>
    <string name="tim_theo_lop">Tìm theo lớp…</string>
    <string name="thoat">Thoát</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="ten_dang_nhap">Tên đăng nhập (Mã GV)</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="loi_dang_nhap">Tài khoản hoặc mật khẩu không đúng!</string>
    <string name="nhap_day_du">Vui lòng nhập đầy đủ thông tin!</string>
</resources>
